--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hard-tech",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/FranciscoADiaz/hard-tech.git",
+  "homepage": "https://FranciscoADiaz/hard-tech.git",
   "type": "module",
   "scripts": {
     "dev": "vite",
